# CSGOBackend

./: .env.example  .gitignore  CRAWLER_CONFIG.md  DEPLOYMENT_INSTRUCTIONS.md  Dockerfile  JUPYTER_SETUP_GUIDE.md  LICENSE  QUICK_START.md  README.md  batch_process.py  cli.py  config.py  deploy_script.py  docker-compose.yml  gongjiyun_setup_guide.md  main.py  model_trainer.py  notebook_data_extractor.py  notebook_data_processor.py  notebook_data_processor_clean.py  notebook_data_quality.py  notebook_file_checker.py  notebook_gpu_trainer.py  notebook_main_workflow.py  notebook_npz_debugger.py  notebook_npz_loader.py  notebook_setup.py  pyproject.toml  quick_test_predict.py  remote_training_manager.py  requirements.txt  requirements_gpu.txt  router.py  run_tests.py  start_server.py  test_crawler_thread.py  test_crawler_with_mock.py  test_curl_api.py  test_main.py  test_mongodb_connection.py  (+3 more)
__test__/: README.md  latest_7h_prediction_frontend.json  latest_7h_prediction_raw.json  latest_7h_test_report.txt  requests_test.py  test_7h_predict.py
__test__/crawler/: simple_crawler_test.py  test_crawler.py  test_simple_crawler.py
__test__/database/: test_mongodb_connection.py
__test__/prediction/: test_latest_7h_prediction.py
__test__/tools/: llm_request_tool.py  (+4 more)
deployment/: 22313.json  config.json  data_processor.py  gpu_trainer.py  start.sh
modules/: __init__.py  analysis.py  crawler.py  crawler_api.py  database.py  llm_service.py  market.py  models.py  prediction.py
tools/: README.md  llm_data_retriever.py  llm_request_tool.py  llm_test_cli.py  predict_tool.py
